Fix: Menu item that have children is higher
It's not visible with Hydrogen, but you can reproduce it with an empty theme, no style added.

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -46,6 +46,7 @@
 
             .g-menu-item-container {
                 @include transition(transform .2s ease-out);
+                word-break: break-all;
             }
 
 	    	// Menu Parent Indicator on Main TopLevel
